# gandhi

./: .gitignore  CNAME  README.md  Readme.md  app.py  index.html  n8n.js  pyproject.toml
calendar/: index.html
full_order/: index.html
order/: index.html
static/: build.css  kfc_menu.csv  menu-2025-10.json  menu.csv  menu.json  style.css  theme-updater.js
stats/: heatmap.js  index.html  utils.js
templates/: base.html  full_order.html  menu.html
