[tool.poetry]
name = "gandhi"
version = "0.1.0"
description = ""
authors = ["Yrieix Leprince <y.leprince@criteo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
flask = "^3.0.3"
pytesseract = "^0.3.13"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
