[tool.poetry]
name = "gandhi"
version = "0.1.0"
description = ""
authors = ["Yrieix Leprince <y.leprince@criteo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
